# nanoengine

./: CMakeLists.txt
source/: engine.cpp  engine.h  gc.h  main.cpp  scenegraph.cpp  scenegraph.h
source/nodes/: node_aabb.h  node_gc.cpp  node_null.h  node_rtti.cpp  node_script.h  node_sprite.h  node_tilemap.h  nodes.h
tests/: main.cpp
